# liferay-types

./: Cargo.toml  Makefile.toml
fetch-specs/: Cargo.toml  Makefile.toml
fetch-specs/src/: apis.rs  liferay_client.rs  main.rs
liferay/: .blade.properties  gradle.properties
specs/: analytics-settings-rest-v1.0.json  batch-planner-v1.0.json  bulk-v1.0.json  change-tracking-rest-v1.0.json  data-engine-v2.0.json  digital-signature-rest-v1.0.json  dispatch-rest-v1.0.json  headless-admin-address-v1.0.json  headless-admin-content-v1.0.json  headless-admin-list-type-v1.0.json  headless-admin-taxonomy-v1.0.json  headless-admin-user-v1.0.json  headless-admin-workflow-v1.0.json  headless-batch-engine-v1.0.json  headless-commerce-admin-account-v1.0.json  headless-commerce-admin-catalog-v1.0.json  headless-commerce-admin-channel-v1.0.json  headless-commerce-admin-inventory-v1.0.json  headless-commerce-admin-order-v1.0.json  headless-commerce-admin-pricing-v1.0.json  headless-commerce-admin-pricing-v2.0.json  headless-commerce-admin-shipment-v1.0.json  headless-commerce-admin-site-setting-v1.0.json  headless-commerce-delivery-cart-v1.0.json  headless-commerce-delivery-catalog-v1.0.json  headless-commerce-delivery-order-v1.0.json  headless-commerce-machine-learning-v1.0.json  headless-delivery-v1.0.json  headless-form-v1.0.json  headless-portal-instances-v1.0.json  headless-site-v1.0.json  headless-user-notification-v1.0.json  notification-v1.0.json  object-admin-v1.0.json  portal-search-rest-v1.0.json  portal-workflow-metrics-v1.0.json  saml-admin-v1.0.json  (+2 more)
