[package]
name = "fetch-specs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
openapi = "0.1.5"
reqwest = "0.11.18"
serde = "1.0.174"
serde_derive = "1.0.174"
serde_json = "1.0.103"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
